Fix servlet exception involving cglib
see #321